--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.mongopipe</groupId>
     <artifactId>mongopipe-spring</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>MongoPipe Spring library</name>
     <description>Run and manage MongoDB pipelines. Stores pipelines in the database, binds them to user own interface methods in the code.
     </description>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.mongopipe</groupId>
             <artifactId>mongopipe-core</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
